--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.460.0",
-    "@google/genai": "^0.2.1"
+    "@google/genai": "latest"
   }
 }
