feat: Enhance Brave Gym branding with visual effects
Introduces new CSS animations and hover effects to elevate the branding.
Adds subtle pulsing and glowing effects to the logo and interactive text elements.
Removes the unused AI chat component and its dependencies, simplifying the application.
Updates dependencies to ensure compatibility and maintainability.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "lucide-react": "^0.460.0",
-    "@google/genai": "latest"
+    "lucide-react": "^0.460.0"
   }
 }
